@startuml

title __IMPL's Class Diagram__\n

  namespace com.sapphireStar.dao {
    namespace impl {
      class com.sapphireStar.dao.impl.AdministratorDaoImpl {
          + AdministratorDaoImpl()
          + getAdministratorByPhone()
      }
    }
  }


  namespace com.sapphireStar.dao {
    namespace impl {
      class com.sapphireStar.dao.impl.FlightDaoImpl {
          + FlightDaoImpl()
          + GetFlights()
          + GetFlightsByPT()
          + removeFlight()
      }
    }
  }


  namespace com.sapphireStar.dao {
    namespace impl {
      class com.sapphireStar.dao.impl.MyAttentionDaoImpl {
          + MyAttentionDaoImpl()
          + addMyAttention()
          + getMyAttention()
          + removeMyAttention()
      }
    }
  }

  interface com.sapphireStar.dao.MyAttentionDao{
    + MyAttentionDaoImpl()
              + addMyAttention()
              + getMyAttention()
              + removeMyAttention()
  }

  namespace com.sapphireStar.dao {
    namespace impl {
      class com.sapphireStar.dao.impl.MyOrderDaoImpl {
          + MyOrderDaoImpl()
          + addMyOrder()
          + getMyOrderByPhone()
          + modifyState()
          + removeMyOrder()
      }
    }
  }



  interface com.sapphireStar.dao.MyOrderDao{
    + MyOrderDaoImpl()
              + addMyOrder()
              + getMyOrderByPhone()
              + modifyState()
              + removeMyOrder()
  }
  interface com.sapphireStar.dao.FlightDao{
    + FlightDaoImpl()
              + GetFlights()
              + GetFlightsByPT()
              + removeFlight()
  }

  namespace com.sapphireStar.dao {
    namespace impl {
      class com.sapphireStar.dao.impl.NormalUserDaoImpl {
          + Login()
          + NormalUserDaoImpl()
          + addNormalUSer()
          + addUser()
          + getUserByPhone()
          + modifyIdNumber()
          + modifyPassword()
          + modifyPhone()
          + forgetPassword()
      }
    }
  }
  interface com.sapphireStar.dao.NormalUserDao{
    + Login()
              + NormalUserDaoImpl()
              + addNormalUSer()
              + addUser()
              + getUserByPhone()
              + modifyIdNumber()
              + modifyPassword()
              + modifyPhone()
              + forgetPassword()
  }


  namespace com.sapphireStar.dao {
    namespace impl {
      class com.sapphireStar.dao.impl.PlaneTicketDaoImpl {
          + PlaneTicketDaoImpl()
          + getPlaneTicketByFlight()
      }
    }
  }

  interface com.sapphireStar.dao.PlaneTicketDao{
    + getPlaneTicketByFlight()
  }

  interface com.sapphireStar.dao.AdministratorDao{
    + getAdministratorByPhone()
  }

  class com.sapphireStar.android_project.DataBase.MySqlHelper{
    -CLS
    -URL
    -USER
    -PASSWORD
    *connection
    *statement
    *preparedStatement
    *cursor
    +getDatabase()
    +closeDatabase()
  }

  com.sapphireStar.dao.impl.AdministratorDaoImpl .up.|> com.sapphireStar.dao.AdministratorDao
  com.sapphireStar.dao.impl.AdministratorDaoImpl -up-|> com.sapphireStar.android_project.DataBase.MySqlHelper
  com.sapphireStar.dao.impl.FlightDaoImpl .up.|> com.sapphireStar.dao.FlightDao
  com.sapphireStar.dao.impl.FlightDaoImpl -up-|> com.sapphireStar.android_project.DataBase.MySqlHelper
  com.sapphireStar.dao.impl.MyAttentionDaoImpl .up.|> com.sapphireStar.dao.MyAttentionDao
  com.sapphireStar.dao.impl.MyAttentionDaoImpl -up-|> com.sapphireStar.android_project.DataBase.MySqlHelper
  com.sapphireStar.dao.impl.MyOrderDaoImpl .up.|> com.sapphireStar.dao.MyOrderDao
  com.sapphireStar.dao.impl.MyOrderDaoImpl -up-|> com.sapphireStar.android_project.DataBase.MySqlHelper
  com.sapphireStar.dao.impl.NormalUserDaoImpl .up.|> com.sapphireStar.dao.NormalUserDao
  com.sapphireStar.dao.impl.NormalUserDaoImpl -up-|> com.sapphireStar.android_project.DataBase.MySqlHelper
  com.sapphireStar.dao.impl.PlaneTicketDaoImpl .up.|> com.sapphireStar.dao.PlaneTicketDao
  com.sapphireStar.dao.impl.PlaneTicketDaoImpl -up-|> com.sapphireStar.android_project.DataBase.MySqlHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml


